# stayer-protocol

./: CHANGELOG.md  Cargo.toml  package-lock.json
cli/: Cargo.toml  cli.rs
contracts/: .gitignore  CONVENTIONS.md  Cargo.toml  Odra.toml  README.md
contracts/cli/: Cargo.toml  cli.rs
contracts/cusd/src/: cusd.rs  lib.rs
contracts/liquid_staking/: Cargo.toml
contracts/liquid_staking/src/: lib.rs  liquid_staking.rs
contracts/oracle/: Cargo.toml
contracts/oracle/src/: oracle.rs
contracts/resources/: contracts.toml
contracts/stayer/src/: stayer.rs
contracts/validator_registry/: Cargo.toml
contracts/validator_registry/src/: lib.rs  validator_registry.rs
contracts/yscspr/src/: lib.rs  yscspr.rs
cusd/: Cargo.toml
docs/: Stayer Whitepaper.aux  Stayer Whitepaper.fdb_latexmk  Stayer Whitepaper.fls  Stayer Whitepaper.tex
frontend/: .mcp.json  next.config.mjs  package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx  provider.tsx
frontend/src/app/(dashboard)/_components/: AddCollateralForm.tsx  AnimatedNumber.tsx  BackgroundVideo.tsx  BorrowForm.tsx  BorrowWidget.tsx  ChooseValidatorForm.tsx  FormCard.tsx  Header.tsx  InfoLine.tsx  LendingMarket.tsx  MarketStatsCard.tsx  RepayForm.tsx  StakeForm.tsx  StakeWidget.tsx  UnstakeForm.tsx
frontend/src/app/(dashboard)/dashboard/: layout.tsx  page.tsx
frontend/src/app/(dashboard)/hooks/: useLiquidStaking.ts  useStayerVault.ts
frontend/src/app/(landing)/: layout.tsx  page.tsx
frontend/src/app/(landing)/_components/: Header.tsx
frontend/src/app/(landing)/_sections/: HeroSection.tsx
frontend/src/app/_components/: Footer.tsx  Header.tsx  ProtectedContent.tsx  WalletConnect.tsx
frontend/src/app/api/rpc/: route.ts
frontend/src/app/dashboard/: layout.tsx  page.tsx
frontend/src/app/dashboard/_components/: BorrowForm.tsx  BorrowWidget.tsx  ChooseValidatorForm.tsx  Header.tsx  InfoLine.tsx  LendingMarket.tsx  RepayForm.tsx  StakeForm.tsx  StakeWidget.tsx  UnstakeForm.tsx
frontend/src/app/hooks/: types.ts  useCUSD.ts  useCasper.ts  useLiquidStaking.ts  usePriceOracle.ts  useStayerVault.ts  useValidatorRegistry.ts  useYSCSPR.ts
frontend/src/app/lending/: layout.tsx  page.tsx
frontend/src/app/lending/_components/: BorrowPanel.tsx  LeftPanel.tsx  PositionCard.tsx
frontend/src/app/staking/: layout.tsx  page.tsx
frontend/src/app/staking/_components/: ChooseValidatorForm.tsx  FormCard.tsx  Header.tsx  InfoLine.tsx  (+4 more)
frontend/src/components/: click-provider.tsx
frontend/src/components/globals/: Favicon.tsx  Logo.tsx
frontend/src/configs/: constants.ts  site.ts
frontend/src/hooks/: useConfetti.ts
frontend/src/libs/: casper.ts  click.ts  cspr-cloud.ts  odra-proxy.ts  odra.ts
frontend/src/theme/recipes/: button.ts
frontend/src/theme/semantic-tokens/: colors.ts
frontend/src/theme/tokens/: colors.ts
frontend/src/types/: core.ts  cspr-cloud.ts  cspr.ts
frontend/src/utils/: index.ts
keeper/: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  package-lock.json  package.json  test-delegate.ts
keeper/src/: app.controller.ts  app.module.ts
keeper/src/casper/: casper.module.ts  casper.service.ts
keeper/src/config/: config.ts
keeper/src/delegation/: delegation.module.ts  delegation.service.ts
keeper/src/liquid-staking/: liquid-staking.module.ts  liquid-staking.service.ts  unbonding-tracker.ts
keeper/src/scheduler/: scheduler.module.ts  scheduler.service.ts
keeper/src/validator-registry/: validator-registry.module.ts  validator-registry.service.ts
my-casper-app/: package-lock.json  package.json
my-casper-app/src/: App.tsx
my-casper-app/src/components/ClickTopBar/: index.tsx
oracle/src/: lib.rs
resources/: contracts.toml
stayer/: Cargo.toml
stayer/src/: lib.rs  stayer.rs
yscspr/: Cargo.toml
(+14 files in other folders)
