[workspace]
members = [
    "stayer",
    "cusd",
    "yscspr",
    "oracle",
    "liquid_staking",
    "validator_registry",
    "cli",
]
resolver = "2"

[workspace.dependencies]
odra = { version = "2.4.0", default-features = false }
odra-test = { version = "2.4.0", default-features = false }
odra-build = { version = "2.4.0", default-features = false }
odra-cli = { version = "2.4.0", default-features = false }

[profile.release]
codegen-units = 1
lto = true

[profile.dev.package."*"]
opt-level = 3
