[package]
name = "casper-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
stayer = { path = "../stayer" }
cusd = { path = "../cusd" }
yscspr = { path = "../yscspr" }
oracle = { path = "../oracle" }
validator_registry = { path = "../validator_registry" }
liquid_staking = { path = "../liquid_staking" }
odra = { workspace = true }
odra-cli = { workspace = true }

[[bin]]
name = "stayer_protocol_cli"
path = "cli.rs"